<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/index_rl_contain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.tsingsee.easyrtc.view.MyViewPager
            android:id="@+id/index_vp_fragment_list_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/index_fl_bottom_bar">

        </com.tsingsee.easyrtc.view.MyViewPager>

        <FrameLayout
            android:id="@+id/index_fl_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/index_fl_bg_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/bottom_bar_background"
                android:clickable="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/index_bottom_bar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_home_image"
                        android:layout_width="20dp"
                        android:layout_height="27dp"
                        android:layout_gravity="top|center"
                        android:src="@drawable/index_bottom_bar_image_select1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar1"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/index_bottom_bar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_school_image"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="top|center"
                        android:layout_marginTop="2dp"
                        android:src="@drawable/index_bottom_bar_image_select2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar2"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/index_bottom_bar3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/index_bottom_bar_notice_image"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_gravity="top|center"
                        android:src="@drawable/index_bottom_bar_image_select3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginTop="2dp"
                        android:text="@string/index_bottom_bar3"
                        android:textColor="@drawable/bottom_bar_text_color_select"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

        </FrameLayout>

    </RelativeLayout>

</LinearLayout>